Update code, add missing dependency